--- a/index.html
+++ b/index.html
@@ -1,10 +1,177 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__menu header__link-list">
+          <li class="header__links-list-item_no-bullit">
+            <a href="#0" class="header__link header__link_active">главная</a>
+          </li>
+          <li>
+            <a href="#lots">посмотреть лоты</a>
+          </li>
+          <li>
+            <a href="#about">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo"
+        ><img src="./images/logo-black.svg" alt="Черный логотип"
+      /></a>
+      <address class="address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенгрази 263-265,<br />Амстердам</p>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text letter-spacing-extended">Оно</span>
+          <span class="aligned-text aligned-text_center letter-spacing-extended"
+            >тебе</span
+          >
+          <span class="aligned-text aligned-text_right letter-spacing-extended"
+            >надо</span
+          >
+        </h1>
+        <div class="cover__description">
+          <h2 class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </h2>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
+
+      <section class="lots">
+        <h1 class="lots__heading">Лоты</h1>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h1 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h1>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h1 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h1>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h1 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h1>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a href="#0" class="lots__look-more-link">Посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about__logo">
+          <img src="./images/logo-white.svg" class="about__logo-image" />
+        </div>
+        <h1 class="about__title">Об аукционе</h1>
+        <div></div>
+        <div class="about__text">
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address class="address footer__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенгрази 263-265,<br />Амстердам</p>
+      </address>
+      <nav>
+        <ul class="footer__menu">
+          <li>
+            <a href="#0" class="footer__menu-link footer__menu-link_active"
+              >главная</a
+            >
+          </li>
+          <li>
+            <a href="#lots" class="footer__links-list-item">посмотреть лоты</a>
+          </li>
+          <li>
+            <a href="#about" class="footer__links-list-item">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li>
+          <a href="#yt" class="footer__social-link"
+            ><img src="./images/yt.svg" class="footer__social-icon"
+          /></a>
+        </li>
+        <li>
+          <a href="#vk" class="footer__social-link"
+            ><img src="./images/vk.svg" class="footer__social-icon"
+          /></a>
+        </li>
+        <li>
+          <a href="#pinterest" class="footer__social-link"
+            ><img src="./images/pinterest.svg" class="footer__social-icon"
+          /></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
