--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
@@ -18,20 +18,20 @@
             <a href="#0" class="header__link header__link_active">главная</a>
           </li>
           <li>
-            <a href="#lots">посмотреть лоты</a>
+            <a href="section#lots">посмотреть лоты</a>
           </li>
           <li>
-            <a href="#about">об аукционе</a>
+            <a href="section#about">об аукционе</a>
           </li>
         </ul>
       </nav>
       <a class="header__logo"
-        ><img src="./images/logo-black.svg" alt="Черный логотип"
+        ><img src="./images/logo-black.svg" class="header__logo-image" alt="Черный логотип"
       /></a>
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенгрази 263-265,<br />Амстердам</p>
+        <p class="header__address">наб. Принсенграхт 263-<br>265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -47,23 +47,23 @@
           >
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">
+          <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
-          </h2>
-          <button class="bet-button">Сделать ставку</button>
+          </p>
+          <button type="button" class="bet-button">Сделать ставку</button>
         </div>
       </section>
 
       <section class="lots">
-        <h1 class="lots__heading">Лоты</h1>
+        <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a href="#0" class="card-link">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h1 class="card__title">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h1>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -76,9 +76,9 @@
             <a href="#0" class="card-link">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h1 class="card__title">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h1>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -94,9 +94,9 @@
             <a href="#0" class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <h1 class="card__title">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h1>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -111,10 +111,13 @@
       </section>
       <section class="about">
         <div class="about__logo">
-          <img src="./images/logo-white.svg" class="about__logo-image" />
+          <img
+            src="./images/logo-white.svg"
+            class="about__logo-image"
+            alt="Черный логотип"
+          />
         </div>
-        <h1 class="about__title">Об аукционе</h1>
-        <div></div>
+        <h2 class="about__title">Об аукционе</h2>
         <div class="about__text">
           <p>
             Здесь вы не встретите очередное пафосное собрание невероятно
@@ -138,7 +141,7 @@
       <address class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенгрази 263-265,<br />Амстердам</p>
+        <p>наб. Принсенграхт 263-265,<br />Амстердам</p>
       </address>
       <nav>
         <ul class="footer__menu">
@@ -157,18 +160,27 @@
       </nav>
       <ul class="footer__social-list">
         <li>
-          <a href="#yt" class="footer__social-link"
-            ><img src="./images/yt.svg" class="footer__social-icon"
+          <a href="#yt" target="_blank" class="footer__social-link"
+            ><img
+              src="./images/yt.svg"
+              class="footer__social-icon"
+              alt="Иконка YouTube"
           /></a>
         </li>
         <li>
-          <a href="#vk" class="footer__social-link"
-            ><img src="./images/vk.svg" class="footer__social-icon"
+          <a href="#vk" target="_blank" class="footer__social-link"
+            ><img
+              src="./images/vk.svg"
+              class="footer__social-icon"
+              alt="Иконка ВК"
           /></a>
         </li>
         <li>
-          <a href="#pinterest" class="footer__social-link"
-            ><img src="./images/pinterest.svg" class="footer__social-icon"
+          <a href="#pinterest" target="_blank" class="footer__social-link"
+            ><img
+              src="./images/pinterest.svg"
+              class="footer__social-icon"
+              alt="Иконка Pinterest"
           /></a>
         </li>
       </ul>
